Changes for updating cargo information from Packing and containers